# automate-experiments

./: .gitignore  CONTRIBUTING.md  LICENSE  install.sh  pyproject.toml
.envs/: dev_environment.yml  environment.yml
.github/: ci.yml  use_data.yml  write_exp.yml
.github/workflows/: ci.yml  exp.yml  upload_data.yml  use_data.yml
agi/: model.py
scripts/: train.py
