[tool.poetry]
name = "homebrewnlp_jax"
version = "0.0.1"
# TODO: 
description = ""
license = "MIT"
# TODO: 
authors = [
    "First Last <first.last@gmail.com>",
]
readme = 'README.md'
# TODO: 
homepage = "https://github.com/sudomaze/automate-experiments"
# TODO: 
repository = "https://github.com/sudomaze/automate-experiments"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "3.8.13"
torch = "^1.11.0"
torchvision = "^0.12.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.13.7"
black = "^22.3.0"
mypy = "^0.950"
pytest-cov = "^3.0.0"
pre-commit = "^2.18.1"
pycln = "^1.3.2"
isort = "^5.10.1"
pre-commit-hooks = "^4.2.0"

[tool.mypy]
files = ["klaam"]
show_error_codes = true
pretty = true

[tool.pytest]
# log_cli = true
addopts = [
    # show summary of all tests that did not pass
    "-ra",
    # idk
    "-s",
    # Make tracebacks shorter
    "--tb=native",
    # enable all warnings
    "-Wd",
]
testpaths = ["test"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120 # override the default of 88

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"
